--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="decription"
       content="Design and ready-made case of various sites"
@@ -41,6 +42,11 @@
               <a class="nav-list" href="">Contacts</a>
             </li>
           </ul>
+          <button type="button" class="menu-btn">
+            <svg class="" width="24" height="24">
+              <use href="./images/icons.svg#burger"></use>
+            </svg>
+          </button>
         </nav>
 
         <address class="address">
@@ -137,10 +143,15 @@
             <li class="team-items">
               <img
                 class="team-items-images"
-                src="./images/mark-guerrero.jpg"
+                srcset="
+                  ./images/team/mark-guerrero@1x.jpg 1x,
+                  ./images/team/mark-guerrero@2x.jpg 2x
+                "
+                src="./images/team/mark-guerrero.jpg"
                 alt="Mark Guerrero photo"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="container-socials">
                 <h3 class="team-items-title">Mark Guerrero</h3>
@@ -180,10 +191,15 @@
             <li class="team-items">
               <img
                 class="team-items-images"
-                src="./images/tom-ford.jpg"
+                srcset="
+                  ./images/team/tom-ford@1x.jpg 1x,
+                  ./images/team/tom-ford@2x.jpg 2x
+                "
+                src="./images/team/tom-ford.jpg"
                 alt="Tom Ford photo"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="container-socials">
                 <h3 class="team-items-title">Tom Ford</h3>
@@ -224,10 +240,15 @@
             <li class="team-items">
               <img
                 class="team-items-images"
-                src="./images/camila-garcia.jpg"
+                srcset="
+                  ./images/team/camila-garcia@1x.jpg 1x,
+                  ./images/team/camila-garcia@2x.jpg 2x
+                "
+                src="./images/team/camila-garcia.jpg"
                 alt="Camila Garcia photo"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="container-socials">
                 <h3 class="team-items-title">Camila Garcia</h3>
@@ -268,10 +289,15 @@
             <li class="team-items">
               <img
                 class="team-items-images"
-                src="./images/daniel-wilson.jpg"
+                srcset="
+                  ./images/team/daniel-wilson@1x.jpg 1x,
+                  ./images/team/daniel-wilson@2x.jpg 2x
+                "
+                src="./images/team/daniel-wilson.jpg"
                 alt="Daniel Wilson photo"
                 width="264"
                 height="260"
+                loading="lazy"
               />
               <div class="container-socials">
                 <h3 class="team-items-title">Daniel Wilson</h3>
@@ -323,10 +349,15 @@
               <div class="portfolio-block">
                 <img
                   class="portfolio-img"
-                  src="./images/banking-app.jpg"
+                  srcset="
+                    ./images/portfolio/banking-app@1x.jpg 1x,
+                    ./images/portfolio/banking-app@2x.jpg 2x
+                  "
+                  src="./images/portfolio/banking-app.jpg"
                   alt="Banking App"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -343,10 +374,15 @@
               <div class="portfolio-block">
                 <img
                   class="portfolio-img"
-                  src="./images/cashless-payment.jpg"
+                  srcset="
+                    ./images/portfolio/cashless-payment@1x.jpg 1x,
+                    ./images/portfolio/cashless-payment@2x.jpg 2x
+                  "
+                  src="./images/portfolio/cashless-payment.jpg"
                   alt="Cashless Payment"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -363,10 +399,15 @@
               <div class="portfolio-block">
                 <img
                   class="portfolio-img"
-                  src="./images/meditation-app.jpg"
+                  srcset="
+                    ./images/portfolio/meditation-app@1x.jpg 1x,
+                    ./images/portfolio/meditation-app@2x.jpg 2x
+                  "
+                  src="./images/portfolio/meditation-app.jpg"
                   alt="Meditation App"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -383,10 +424,15 @@
               <div class="portfolio-block">
                 <img
                   class="portfolio-img"
-                  src="./images/taxi-service.jpg"
+                  srcset="
+                    ./images/portfolio/taxi-service@1x.jpg 1x,
+                    ./images/portfolio/taxi-service@2x.jpg 2x
+                  "
+                  src="./images/portfolio/taxi-service.jpg"
                   alt="Taxi Service"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -403,10 +449,15 @@
               <div class="portfolio-block">
                 <img
                   class="portfolio-img"
-                  src="./images/screen-illustrations.jpg"
+                  srcset="
+                    ./images/portfolio/screen-illustrations@1x.jpg 1x,
+                    ./images/portfolio/screen-illustrations@2x.jpg 2x
+                  "
+                  src="./images/portfolio/screen-illustrations.jpg"
                   alt="Screen Illustrations"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -423,10 +474,15 @@
               <div class="portfolio-block">
                 <img
                   class="portfolio-img"
-                  src="./images/online-courses.jpg"
+                  srcset="
+                    ./images/portfolio/online-courses@1x.jpg 1x,
+                    ./images/portfolio/online-courses@2x.jpg 2x
+                  "
+                  src="./images/portfolio/online-courses.jpg"
                   alt="Online Courses"
                   width="360"
                   height="300"
+                  loading="lazy"
                 />
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
@@ -586,16 +642,83 @@
               <span class="agreement-span">
                 <svg class="agreement-icon" width="10" height="8">
                   <use href="./images/icons.svg#agr"></use></svg></span
-              >I accept the terms and conditions of the&nbsp;<a
-                href="#"
-                class="modal-link"
-                >Privacy Policy</a
+              ><span
+                >I accept the terms and conditions of the&nbsp;<a
+                  href="#"
+                  class="modal-link"
+                  >Privacy Policy</a
+                ></span
               >
             </label>
           </div>
           <button class="form-btn">Send</button>
         </form>
       </div>
+    </div>
+
+    <div class="mobile-menu">
+      <button class="mobile-btn" type="button" aria-label="close-menu">
+        <svg class="mobile-btn-icon" width="24" height="24">
+          <use href="./images/icons.svg#close-mobile"></use>
+        </svg>
+      </button>
+      <ul class="mobile-item">
+        <li class="mobile-list">
+          <a class="mobile-href" href="./index.html">Studio</a>
+        </li>
+        <li class="mobile-list">
+          <a class="mobile-href" href="">Portfolio</a>
+        </li>
+        <li class="mobile-list">
+          <a class="mobile-href" href="">Contacts</a>
+        </li>
+      </ul>
+
+      <address class="mobile-address">
+        <ul class="mobile-address-item">
+          <li class="mobile-address-link">
+            <a class="mobile-address-href" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="mobile-address-link">
+            <a class="mobile-address-href" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
+      </address>
+
+      <ul class="mobile-socials">
+        <li class="mobile-socials-link">
+          <a class="mobile-links" href="https://www.instagram.com/">
+            <svg class="mobile-img" width="24" height="24">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-socials-link">
+          <a class="mobile-links" href="https://twitter.com/">
+            <svg class="mobile-img" width="24" height="24">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-socials-link">
+          <a class="mobile-links" href="https://www.facebook.com/">
+            <svg class="mobile-img" width="24" height="24">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-socials-link">
+          <a class="mobile-links" href="https://www.linkedin.com/">
+            <svg class="mobile-img" width="24" height="24">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
