--- a/index.html
+++ b/index.html
@@ -347,18 +347,40 @@
           <ul class="portfolio-list">
             <li class="portfolio-items">
               <div class="portfolio-block">
-                <img
-                  class="portfolio-img"
-                  srcset="
-                    ./images/portfolio/banking-app@1x.jpg 1x,
-                    ./images/portfolio/banking-app@2x.jpg 2x
-                  "
-                  src="./images/portfolio/banking-app.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                  loading="lazy"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/banking-app-mob-@1x.jpg 1x,
+                      ./images/portfolio/banking-app-mob-@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/banking-tab-@1x.jpg 1x,
+                      ./images/portfolio/banking-tab-@2x.jpg 2x
+                    "
+                    media="(max-width: 1157px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/banking-app-@1x.jpg 1x,
+                      ./images/portfolio/banking-app-@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                    type="image/jpg"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/banking-app-@1x.jpg"
+                    alt="Banking App"
+                    width="360"
+                    height="300"
+                    loading="lazy"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -372,18 +394,40 @@
             </li>
             <li class="portfolio-items">
               <div class="portfolio-block">
-                <img
-                  class="portfolio-img"
-                  srcset="
-                    ./images/portfolio/cashless-payment@1x.jpg 1x,
-                    ./images/portfolio/cashless-payment@2x.jpg 2x
-                  "
-                  src="./images/portfolio/cashless-payment.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                  loading="lazy"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/cashless-payment-mob-@1x.jpg 1x,
+                      ./images/portfolio/cashless-payment-mob-@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/cashless-payment-tab-@1x.jpg 1x,
+                      ./images/portfolio/cashless-payment-tab-@2x.jpg 2x
+                    "
+                    media="(max-width: 1157px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/cashless-payment-@1x.jpg 1x,
+                      ./images/portfolio/cashless-payment-@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                    type="image/jpg"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/cashless-payment-@1x.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                    loading="lazy"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -397,18 +441,40 @@
             </li>
             <li class="portfolio-items">
               <div class="portfolio-block">
-                <img
-                  class="portfolio-img"
-                  srcset="
-                    ./images/portfolio/meditation-app@1x.jpg 1x,
-                    ./images/portfolio/meditation-app@2x.jpg 2x
-                  "
-                  src="./images/portfolio/meditation-app.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                  loading="lazy"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/meditation-app-mob-@1x.jpg 1x,
+                      ./images/portfolio/meditation-app-mob-@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/meditation-app-tab-@1x.jpg 1x,
+                      ./images/portfolio/meditation-app-tab-@2x.jpg 2x
+                    "
+                    media="(max-width: 1157px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/meditation-app-@1x.jpg 1x,
+                      ./images/portfolio/meditation-app-@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                    type="image/jpg"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/meditation-app-@1x.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                    loading="lazy"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -422,18 +488,40 @@
             </li>
             <li class="portfolio-items">
               <div class="portfolio-block">
-                <img
-                  class="portfolio-img"
-                  srcset="
-                    ./images/portfolio/taxi-service@1x.jpg 1x,
-                    ./images/portfolio/taxi-service@2x.jpg 2x
-                  "
-                  src="./images/portfolio/taxi-service.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                  loading="lazy"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/taxi-service-mob-@1x.jpg 1x,
+                      ./images/portfolio/taxi-service-mob-@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/taxi-service-tab-@1x.jpg 1x,
+                      ./images/portfolio/taxi-service-tab-@2x.jpg 2x
+                    "
+                    media="(max-width: 1157px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/taxi-service-@1x.jpg 1x,
+                      ./images/portfolio/taxi-service-@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                    type="image/jpg"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/taxi-service-@1x.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                    loading="lazy"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -447,18 +535,40 @@
             </li>
             <li class="portfolio-items">
               <div class="portfolio-block">
-                <img
-                  class="portfolio-img"
-                  srcset="
-                    ./images/portfolio/screen-illustrations@1x.jpg 1x,
-                    ./images/portfolio/screen-illustrations@2x.jpg 2x
-                  "
-                  src="./images/portfolio/screen-illustrations.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                  loading="lazy"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/screen-illustrations-mob-@1x.jpg 1x,
+                      ./images/portfolio/screen-illustrations-mob-@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/screen-illustrations-tab-@1x.jpg 1x,
+                      ./images/portfolio/screen-illustrations-tab-@2x.jpg 2x
+                    "
+                    media="(max-width: 1157px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/screen-illustrations-@1x.jpg 1x,
+                      ./images/portfolio/screen-illustrations-@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                    type="image/jpg"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/screen-illustrations-@1x.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                    loading="lazy"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -472,18 +582,40 @@
             </li>
             <li class="portfolio-items">
               <div class="portfolio-block">
-                <img
-                  class="portfolio-img"
-                  srcset="
-                    ./images/portfolio/online-courses@1x.jpg 1x,
-                    ./images/portfolio/online-courses@2x.jpg 2x
-                  "
-                  src="./images/portfolio/online-courses.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                  loading="lazy"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/portfolio/online-courses-mob-@1x.jpg 1x,
+                      ./images/portfolio/online-courses-mob-@2x.jpg 2x
+                    "
+                    media="(max-width: 767px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/online-courses-tab-@1x.jpg 1x,
+                      ./images/portfolio/online-courses-tab-@2x.jpg 2x
+                    "
+                    media="(max-width: 1157px)"
+                    type="image/jpg"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/online-courses-@1x.jpg 1x,
+                      ./images/portfolio/online-courses-@2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                    type="image/jpg"
+                  />
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolio/online-courses-@1x.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                    loading="lazy"
+                  />
+                </picture>
                 <p class="portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
