--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
               <a class="nav-list nav-list-active" href="./index.html">Studio</a>
             </li>
             <li class="list-item-list">
-              <a class="nav-list" href="">Portfolio</a>
+              <a class="nav-list" href="#portfolio">Portfolio</a>
             </li>
             <li class="list-item-list">
-              <a class="nav-list" href="">Contacts</a>
+              <a class="nav-list" href="#contacts">Contacts</a>
             </li>
           </ul>
           <button type="button" class="menu-btn">
@@ -158,28 +158,48 @@
                 <p class="team-items-text">Product Designer</p>
                 <ul class="socials-item">
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://twitter.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -207,28 +227,48 @@
 
                 <ul class="socials-item">
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://twitter.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -256,28 +296,48 @@
 
                 <ul class="socials-item">
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://twitter.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -305,28 +365,48 @@
 
                 <ul class="socials-item">
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.instagram.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://twitter.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.facebook.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-item-list">
-                    <a href="" class="social-item-link">
+                    <a
+                      href="https://www.linkedin.com/"
+                      class="social-item-link"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                    >
                       <svg class="socials-icons" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -341,7 +421,7 @@
       <!-- #endregion Team -->
 
       <!-- #region Portfolio -->
-      <section class="portfolio">
+      <section class="portfolio" id="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -633,7 +713,7 @@
       <!-- #endregion Portfolio -->
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="container">
         <div class="container-footer-logo">
           <a class="footer-web" href="./index.html"
